    the bar.
17. Show "Remove from favourites" if item is in favourites, "Add to favourites"
    otherwise.
18. For 1st 10 seconds when connection is lost; disable player menu, and show
    a spinner top right. After 10 seconds, full screen connection lost dialog is
    shown.
19. Add setting for lock screen and notifications; never, always, or only whilst
    playing.

0.4.0
-----
 1. Don't show command in popup error messages.
 2. When editing queue, and auto-scroll is enabled, don't scroll unless current
    track index changes.
 3. Speed up initial page load, by not 'mounting' dialogs (settings, sync,
    etc.) until required.
 4. Minify code for releases.
 5. Don't add add/play-all buttons for A..Z groups.
 6. Fix changing layout in settings.
 7. Show spinner when click text items, as these may fetch items.
 8. Only show "Artist or albums" prompt for top-level genre listing.
 9. Handle BBC iPlayer streams duration change.
10. Stop drag'n'drop scrolling when reach top/bottom of list.

0.3.7
-----
1. Don't ignore clicks on items with a menu.
2. Fix some coding errors spotted by closure compiler.
3. Fix playing items from virtual libraries.
4. Fix clicking on CustomBrowse items.
5. If 'SB Player' is running on current Android device, then disable
   notification and lock screen controls. The code to make these persistent
   interferes with local playback.
6. Add a note to 'save defaults' dialog stating that 'Application layout' is
   not saved as a default.
7. Add custom add/remove favourite, and clear queue, icons.
8. Only allow to pin items that have an icon or image, and are not entry
   fields.

0.3.6
-----
1. Fix pinned apps.
2. Reduce list image size to 50px, as this matches what is requested from
   server.
3. Allow 'Scroll to current' to work even if player is off.
4. Check all command params for "album_id" when determining if can add a 'Play
   album starting at track' action.

0.3.5
-----
1. Fix clicking on server-supplied categories.

0.3.4
-----