@@ -32,6 +32,7 @@
     shown.
 19. Add setting for lock screen and notifications; never, always, or only whilst
     playing.
+20. Don't hide volume controls when player is off, just make disabled.
 
 0.4.0
 -----
